--- a/s1n1exercici2_montseliz/.project
+++ b/s1n1exercici2_montseliz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>s1n1exercici2_montseliz</name>
+	<name>s1.01.niv1.ex2_montseliz</name>
 	<comment></comment>
 	<projects>
 	</projects>
