Tasca_s1_01_montseliz_correccio_cristian

--- a/s1n2exercici1_montseliz/.project
+++ b/s1n2exercici1_montseliz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>s1.1.niv2.ex1_montseliz</name>
+	<name>s1_1_niv2_ex1_montseliz</name>
 	<comment></comment>
 	<projects>
 	</projects>
